--- a/_data/social.yml
+++ b/_data/social.yml
@@ -2,4 +2,6 @@
 github: shakna-israel
 twitter: jimilne
 reddit: s4b3r6
+lulu: lulu.com/spotlight/s4b3r6
+kobo: store.kobobooks.com/en-US/search?query=James%20Milne&fcsearchfield=Author
 ---
